# tinyvmm

./: .gitignore  Cargo.toml  README.md  flake.nix
checks/integration/: bridge.nix  bridge.py  ch.nix  ch.py
tinyvmm/: Cargo.toml
tinyvmm/src/: main.rs
tinyvmm/src/apiserver/: bridges.rs  mod.rs  virtualmachines.rs
tinyvmm/src/ch/: bootstrap.rs  error.rs  mod.rs  runtime.rs  shutdown.rs
tinyvmm/src/cli/: mod.rs
tinyvmm/src/client/: error.rs  mod.rs
tinyvmm/src/database/: bridge.rs  entity.rs  error.rs  metadata.rs  mod.rs  serde.rs  store.rs  virtual_machine.rs
tinyvmm/src/dbus/: mod.rs  networkd.rs  systemd.rs
tinyvmm/src/dns/: error.rs  mod.rs
tinyvmm/src/systemd/: error.rs  mod.rs  networkd.rs  service.rs
tinyvmm/src/systemd/networkd/: bridge.rs  tap.rs
tinyvmm/src/unitserver/: bridges.rs  mod.rs  virtualmachines.rs
vmm_entity/: Cargo.toml
vmm_entity/src/: lib.rs
