[package]
name = "tinyvmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.18"
clap = { version = "^4.0", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
data-encoding = "2.3.3"
env_logger = "0.10.0"
eyre = "0.6.8"
futures = "0.3.25"
handlebars = "4.3.6"
hyper = { version = "0.14.23", features = ["http1", "client"] }
hyperlocal = { version = "0.8.0", default-features = false, features = [
  "client",
] }
indoc = "1.0.8"
ipnet = "2.7.0"
log = { version = "0.4.17" }
regex = "1.7.0"
ring = "0.16.20"
rtnetlink = "0.11.0"
rusqlite = { version = "0.28.0", features = [
  "functions",
  "serde_json",
  "bundled",
] }
serde = { version = "^1.0", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.91"
# systemd_client = "0.2.1"
thiserror = "^1.0"
tokio = { version = "1.23.0", features = ["full", "tracing"] }
vmm = { git = "https://github.com/cloud-hypervisor/cloud-hypervisor", tag = "v28.1", version = "0.1.0", features = [
  "kvm",
] }
net_util = { git = "https://github.com/cloud-hypervisor/cloud-hypervisor", tag = "v28.1", version = "0.1.0" }
zbus = { version = "^3.6", features = ["tokio"] }
zvariant = "3.9.0"
actix-web = "4.2.1"
serde_valid = "0.11.3"
once_cell = "1.17.0"
rand = "0.8.5"
vmm_entity = { path = "../vmm_entity" }
derivative = "2.2.0"

[build-dependencies]
clap = { version = "^4.0", features = ["derive"] }
clap_complete = "4.0.7"
clap_mangen = "0.2.6"
